force-app/main/default/objects/Program_Achievers__c/Program_Achievers__c.object-meta.xml
<CustomObject>
    <label>Program Achievers</label>
    <nameField>
        <label>Product Achievers Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Program Achievers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>