force-app/main/default/objects/Program_Achievers__c/fields/Graduation__c.field-meta.xml
<CustomField>
    <fullName>Graduation__c</fullName>
    <label>Graduation %</label>
    <length>255</length>
    <type>Text</type>
</CustomField>