force-app/main/default/objects/Program_Achievers__c/fields/Graduation_Board__c.field-meta.xml
<CustomField>
    <fullName>Graduation_Board__c</fullName>
    <label>Graduation Board</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>