force-app/main/default/objects/Program_Achievers__c/fields/IMS_Centre__c.field-meta.xml
<CustomField>
    <fullName>IMS_Centre__c</fullName>
    <label>IMS Centre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>