force-app/main/default/objects/Program_Achievers__c/fields/IMS_City__c.field-meta.xml
<CustomField>
    <fullName>IMS_City__c</fullName>
    <label>IMS City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>