force-app/main/default/objects/Program_Achievers__c/fields/School_Admiited__c.field-meta.xml
<CustomField>
    <fullName>School_Admiited__c</fullName>
    <label>School Admiited</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>