force-app/main/default/objects/Program_Achievers__c/fields/Student_Name__c.field-meta.xml
<CustomField>
    <fullName>Student_Name__c</fullName>
    <label>Student Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Program Achievers</relationshipLabel>
    <relationshipName>Program_Achievers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>