force-app/main/default/objects/Program_Achievers__c/fields/Student_Testimonial__c.field-meta.xml
<CustomField>
    <fullName>Student_Testimonial__c</fullName>
    <label>Student Testimonial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>