force-app/main/default/objects/Program_Achievers__c/fields/Student_Testimonial_Video__c.field-meta.xml
<CustomField>
    <fullName>Student_Testimonial_Video__c</fullName>
    <label>Student Testimonial Video</label>
    <type>Url</type>
</CustomField>