force-app/main/default/objects/Program_Achievers__c/fields/Test_Score__c.field-meta.xml
<CustomField>
    <fullName>Test_Score__c</fullName>
    <label>Test Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>