force-app/main/default/objects/Program_Achievers__c/fields/Test_Taken__c.field-meta.xml
<CustomField>
    <fullName>Test_Taken__c</fullName>
    <label>Test Taken</label>
    <length>255</length>
    <type>Text</type>
</CustomField>