force-app/main/default/objects/Program_Achievers__c/fields/X10th_Score_CGPA__c.field-meta.xml
<CustomField>
    <fullName>X10th_Score_CGPA__c</fullName>
    <label>10th Score (CGPA)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>