force-app/main/default/objects/Program_Achievers__c/fields/X12th_Score__c.field-meta.xml
<CustomField>
    <fullName>X12th_Score__c</fullName>
    <label>12th Score %</label>
    <length>255</length>
    <type>Text</type>
</CustomField>